more css fixes play with spacing

--- a/src/Docs/index.scss
+++ b/src/Docs/index.scss
@@ -10,4 +10,5 @@
   }
   width: 80%;
   margin: 0 auto;
+  margin-top: $headermargin;
 }
