--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 @import 'variables';
 
+p {
+  margin-bottom: 0;
+}
+
 a {
   &:hover {
     text-decoration: none;
@@ -19,7 +23,7 @@ div[class$="-text-block"] {
     font-size: 1.25em;
 }
 hr[class$="-divider"] {
-  margin: 0 0 1rem;
+  margin: 1.5rem 0 1.5rem 0;
 }
 p[class$="-text"] {
     font-family: Arial;
@@ -58,10 +62,14 @@ blockquote {
     background-color: $quotecolor;
     border: 1px solid #ddd;
     border-radius: 3px;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
     max-width: 90%;
     margin: 0 auto;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    margin-top: 10px;
     font-size: 0.9em;
     font-style: italic;
     p {
